# S3_Read-Write_Polars

./: Cargo.toml  README.md
src/: main.rs
