[package]
name = "S3_Read-Write_Polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.28.0" , features = ["parquet","lazy"]}
polars-sql = "0.28.0"
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
tokio = {version = "1", features = ["full"]}
clap = { version = "4.2.4", features = ["derive"] }